# BackupFather

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.external.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
backupfather/: __init__.py  config.py  errors.py  health.py  main.py  models.py  retention.py  runner.py  scheduler.py
backupfather/destinations/: bale.py  base.py  bot_api.py  email_smtp.py  local.py  registry.py  telegram.py
backupfather/notifiers/: base.py  email_notifier.py  messages.py  registry.py  telegram_notifier.py
backupfather/processors/: base.py  compress.py  encrypt.py  factory.py
backupfather/sources/: base.py  postgres.py
backupfather/utils/: chunking.py  logger.py  naming.py  retry.py
docs/: PRODUCTION.md
tests/: conftest.py  test_bale.py  test_chunking.py  test_compress.py  test_config.py  test_email.py  test_health.py  test_naming.py  test_notifiers.py  test_postgres_source.py  test_retention.py  test_runner.py  test_telegram.py
