[project]
name = "backupfather"
version = "0.1.0"
description = "The Backupfather — makes your Postgres database an offer it can't refuse. Containerized backups with pluggable destinations."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "requests>=2.32",
]

[project.optional-dependencies]
zstd = ["zstandard>=0.22"]

[project.scripts]
backupfather = "backupfather.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backupfather"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
